Currency update. v2.2.1